--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uploadcare/react-uploader": "^1.6.0",
     "axios": "^1.8.1",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
