--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@uploadcare/react-uploader": "^1.6.0",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
     "prop-types": "^15.8.1",
