--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,14 @@
     "lucide-react": "^0.482.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
-    "react-toastify": "^11.0.5"
+    "react-scrollbars-custom": "^4.1.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
