--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
