--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-input-emoji": "^5.9.0",
     "react-router-dom": "^7.2.0",
     "react-scrollbars-custom": "^4.1.1",
     "react-toastify": "^11.0.5",
